themes/default/public/css/lufi.css
#files {
    border: 2px dashed #BBB;
    border-radius: 5px;
    padding: 25px 25px 41px 25px;
    text-align: center;
    color: #888;
}
#files label {
    padding: 6px 0;
    color: #FFF;
    font-weight: bold;
    margin: 20px auto;
    width: 100%;
}
#files label span {
    cursor: pointer;
}
#files input {
    width: 100%;
    background: rgba(150,225,150,0.0);
    vertical-align: middle;
    text-align: center;
    padding: 0 50%;
    margin-top: -206px;
    color: #FFF;
    font-weight: bold;
    font-size: 200px;
    opacity: 0;
}
.progress-info {
    text-shadow: initial;
    font-weight: bold;
}
#results {
    display: none;
}
a.classic,
a.classic:hover,
a.classic:focus {
    color: #337AB7;
}
.left-mg {
    margin-left: 10px;
    margin-right: 10px;
}
@-moz-document url-prefix() {
    fieldset { display: table-cell; }
}
#render-image {
    max-width: 100%;
    max-height: 200px;
    margin-left: auto;
    margin-right: auto;
}
.input-field .big-prefix {
    width: 6rem;
}
.input-field .big-prefix ~ input,
.input-field .big-prefix ~ textarea,
.input-field .big-prefix ~ label,
.input-field .big-prefix ~ div.select-wrapper  {
    margin-left: 6rem;
    width: 92%;
    width: calc(100% - 6rem);
}
@media only screen and (max-width : 992px) {
    .input-field .big-prefix ~ input {
        width: 82%;
        width: calc(100% - 6rem);
    }
}
@media only screen and (max-width : 600px) {
    .input-field .big-prefix ~ input {
        width: 60%;
        width: calc(100% - 6rem);
    }
}
.file-field .btn.left-mg {
    height: 36px;
    line-height: 36px;
}
.textarea-hidden {
    position: fixed;
    top: 0;
    left: 0;
    width: 2em;
    height: 2em;
    padding: 0;
    border: none;
    outline: none;
    box-shadow: none;
    background: transparent;
}
.hiddendiv.common {
    min-height: 170px;
}
.title-filename {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.files-buttons a {
    margin-bottom: 10px;
}
#pb {
    width: 0;
}
.no_border {
    border: 0;
}
.like-label {
    color: #9e9e9e;
    font-size: 1.5rem;
}
.select-lang .select-wrapper span.caret {
    top: -10px;
    color: #FFF;
}
.select-lang .select-wrapper input.select-dropdown {
    margin-top: 10px;
    margin-bottom: 0;
    border-bottom: 0;
}
.select-lang-mobile .select-wrapper input.select-dropdown {
    color: #444;
    border-bottom: 0;
}
.select-lang-mobile .select-wrapper span.caret {
    top: -10px;
}
.select-lang,
.select-lang-mobile {
    padding-left: 15px !important;
    padding-right: 15px !important;
}
nav .btn-flat {
    color: #fff !important;
    text-transform: initial !important;
}
nav .btn-flat:focus {
    background-color: rgba(0,0,0,0.1) !important;
}

/* pulse animation from Materialize CSS 1.0.0 */
button.pulse {
    margin-left: 1em;
}
.pulse {
    overflow: initial;
    position: relative;
}
.pulse::before {
    content: '';
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: inherit;
    border-radius: inherit;
    -webkit-transition: opacity .3s, -webkit-transform .3s;
    transition: opacity .3s, -webkit-transform .3s;
    transition: opacity .3s, transform .3s;
    transition: opacity .3s, transform .3s, -webkit-transform .3s;
    -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
    animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
    z-index: -1;
}

@-webkit-keyframes pulse-animation {
    0% {
        opacity: 1;
        -webkit-transform: scale(1);
        transform: scale(1);
    }
    50% {
        opacity: 0;
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
    }
    100% {
        opacity: 0;
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
    }
}

@keyframes pulse-animation {
    0% {
        opacity: 1;
        -webkit-transform: scale(1);
        transform: scale(1);
    }
    50% {
        opacity: 0;
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
    }
    100% {
        opacity: 0;
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
    }
}
.margin-bottom-35 {
    margin-bottom: 35px;
}
.toast.teal.accent-3,
.toast.red.accent-2 {
    color: black;
}
.offscreen {
    clip-path: inset(100%);
    clip: rect(1px 1px 1px 1px); /* IE 6/7 */
    clip: rect(1px, 1px, 1px, 1px);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap; /* added line */
    width: 1px;
}
.small-h1 {
    font-size: 2.2rem;
}
.white-background {
    background-color: #FFF;
}
.width-0 { width: 0%; }
.width-1 { width: 1%; }
.width-2 { width: 2%; }
.width-3 { width: 3%; }
.width-4 { width: 4%; }
.width-5 { width: 5%; }
.width-6 { width: 6%; }
.width-7 { width: 7%; }
.width-8 { width: 8%; }
.width-9 { width: 9%; }
.width-10 { width: 10%; }
.width-11 { width: 11%; }
.width-12 { width: 12%; }
.width-13 { width: 13%; }
.width-14 { width: 14%; }
.width-15 { width: 15%; }
.width-16 { width: 16%; }
.width-17 { width: 17%; }
.width-18 { width: 18%; }
.width-19 { width: 19%; }
.width-20 { width: 20%; }
.width-21 { width: 21%; }
.width-22 { width: 22%; }
.width-23 { width: 23%; }
.width-24 { width: 24%; }
.width-25 { width: 25%; }
.width-26 { width: 26%; }
.width-27 { width: 27%; }
.width-28 { width: 28%; }
.width-29 { width: 29%; }
.width-30 { width: 30%; }
.width-31 { width: 31%; }
.width-32 { width: 32%; }
.width-33 { width: 33%; }
.width-34 { width: 34%; }
.width-35 { width: 35%; }
.width-36 { width: 36%; }
.width-37 { width: 37%; }
.width-38 { width: 38%; }
.width-39 { width: 39%; }
.width-40 { width: 40%; }
.width-41 { width: 41%; }
.width-42 { width: 42%; }
.width-43 { width: 43%; }
.width-44 { width: 44%; }
.width-45 { width: 45%; }
.width-46 { width: 46%; }
.width-47 { width: 47%; }
.width-48 { width: 48%; }
.width-49 { width: 49%; }
.width-50 { width: 50%; }
.width-51 { width: 51%; }
.width-52 { width: 52%; }
.width-53 { width: 53%; }
.width-54 { width: 54%; }
.width-55 { width: 55%; }
.width-56 { width: 56%; }
.width-57 { width: 57%; }
.width-58 { width: 58%; }
.width-59 { width: 59%; }
.width-60 { width: 60%; }
.width-61 { width: 61%; }
.width-62 { width: 62%; }
.width-63 { width: 63%; }
.width-64 { width: 64%; }
.width-65 { width: 65%; }
.width-66 { width: 66%; }
.width-67 { width: 67%; }
.width-68 { width: 68%; }
.width-69 { width: 69%; }
.width-70 { width: 70%; }
.width-71 { width: 71%; }
.width-72 { width: 72%; }
.width-73 { width: 73%; }
.width-74 { width: 74%; }
.width-75 { width: 75%; }
.width-76 { width: 76%; }
.width-77 { width: 77%; }
.width-78 { width: 78%; }
.width-79 { width: 79%; }
.width-80 { width: 80%; }
.width-81 { width: 81%; }
.width-82 { width: 82%; }
.width-83 { width: 83%; }
.width-84 { width: 84%; }
.width-85 { width: 85%; }
.width-86 { width: 86%; }
.width-87 { width: 87%; }
.width-88 { width: 88%; }
.width-89 { width: 89%; }
.width-90 { width: 90%; }
.width-91 { width: 91%; }
.width-92 { width: 92%; }
.width-93 { width: 93%; }
.width-94 { width: 94%; }
.width-95 { width: 95%; }
.width-96 { width: 96%; }
.width-97 { width: 97%; }
.width-98 { width: 98%; }
.width-99 { width: 99%; }
.width-100 { width: 100%; }

